deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webauthn
  namespace: webauthn
  labels:
    app: webauthn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webauthn
  template:
    metadata:
      labels:
        app: webauthn
    spec:
      containers:
      - name: webauthn-server
        image: registry.blacksmithlabs.dev/webauthn-server:alpha
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webauthn-service
  namespace: webauthn
  labels:
    app: webauthn
spec:
  type: ClusterIP
  selector:
    app: webauthn
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webauthn-ingress
  namespace: webauthn
  labels:
    app: webauthn
spec:
  ingressClassName: public
  rules:
  - host: bsm.auth.it.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webauthn-service
            port:
              number: 8080
# ---
# apiVersion: migrations.coderanger.net/v1beta1
# kind: Migrator
# metadata:
#   name: webauthn-migrations
#   namespace: webauthn
# spec:
#   selector:
#     matchLabels:
#       app: webauthn
#   # nodeSelector:
#   #   kubernetes.io/arch: amd64
#   image: registry.blacksmithlabs.dev/webauthn-server-migrations:alpha
#   command:
#   - /app/migrate
#   # env:
#   # - name: DB_URI
#   #   valueFrom:
#   #     secretKeyRef:
#   #       name: webauthn-postgres-superuser
#   #       key: uri
